--- a/2021-web-sojon/sunrin.html
+++ b/2021-web-sojon/sunrin.html
@@ -7,14 +7,117 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>sunrin</title>
 
+
   <style>
-    /*test*/
+    *,
+    *::after,
+    *::before{
+      margin: 0;
+      padding: 9;
+      box-sizing: border-box;
+    }
+
+    body>*:not(footer){
+      width: 950px;
+      margin: 0 auto;
+    }
+
+    header{
+      display: flex;
+      justify-content: space-between;
+    }
+    nav > ul{
+      width:100%;
+      display: flex;
+      list-style: none;
+    }
+
+    nav>ul>li{
+      flex:1;
+    }
+    nav>ul>li>a{
+      display: inline-block;
+      width: 100%;
+      color: #555;
+      text-decoration: none;
+      font-size: 13px;
+      line-height: 68px;
+      letter-spacing: -1px;
+      font-weight: 600;
+      text-align: center;
+    }
+    nav > ul >li>a+ul{
+      display: none;
+    }
+    
+    main{
+      display: grid;
+      grid-template-areas: 
+        "banner banner notice1"
+        "banner banner notice2" 
+        "calendar menu ad";
+    }
+    #banner{
+      grid-area: banner;
+    }
+    #notice1{
+      grid-area: notice1;
+    }
+    #notice2{
+      grid-area: notice2;
+    }
+    #calendar{
+      grid-area: calendar;
+    }
+    #menu{
+      grid-area: menu;
+    }
+    #ad{
+      grid-area: ad;
+    }
+    footer{
+      display: flex;
+      background-color: #e5e6e8;
+    }
+    footer>div{
+      display: flex;
+      width: 950px;
+      margin: 0 auto;
+    }
+    #notice1{
+      margin-bottom: 5%;
+    }
+    .listbox{
+      border: 2px solid #e7e7e7;
+      margin-left: 5px;
+      padding: 5% 5% 5% 5%;
+    }
+    .listbox>ul{
+      list-style: none;
+      padding-left: 0;
+      padding-top: 7%;
+    }
+    .listbox>h1{
+      font-size: 100%;
+      color:#dfa21f;
+    }
+    .listbox>ul{
+      font-size: 75%;
+    }
+    .listbox>ul>li{
+      margin-bottom: 5%;
+    }
+    .new>:nth-child(2){
+      background-color: #dfa21f;
+      color:white;
+      padding: 0.2% 2% 0.2% 2%;
+    }
   </style>
 </head>
 
 <body>
   <header>
-    <img src="/assets/sunrin-logo.png" alt="">
+    <img src="./assets/sunrin-logo.png" alt="">
     <div>
       <button>사이트맵</button>
       <button>홈</button>
@@ -64,8 +167,8 @@
     </ul>
   </nav>
   <main>
-    <img src="/assets/main-banner.png" alt="" id="banner">
-    <div class="list box" id="notice1">
+    <img src="./assets/main-banner.png" alt="" id="banner">
+    <div class="listbox" id="notice1">
       <h1>공지/행사</h1>
       <ul>
         <li class="new">
@@ -90,7 +193,7 @@
         </li>
       </ul>
     </div>
-    <div class="list box" id="notice2">
+    <div class="listbox" id="notice2">
       <h1>가정 통신문</h1>
       <ul>
         <li class="new">
@@ -130,7 +233,7 @@
         <div>+</div>
       </h1>
       <div>
-        <img src="/assets/school_menu_thumbnail.jpeg" alt="">
+        <img src="./assets/school_menu_thumbnail.jpeg" alt="">
         <ul>
           <li class="open">
             <div>
@@ -164,12 +267,14 @@
       </div>
     </div>
     <div class="box ad" id="ad">
-      <img src="/assets/ad1.gif" alt="">
+      <img src="./assets/ad1.gif" alt="">
     </div>
   </main>
   <aside></aside>
   <footer>
-    <img src="/assets/sunrin-logo.png" alt="">
+    <div>
+    <img src="./assets/sunrin-logo.png" alt="">
+    
     <div>
       <div></div>
       <address>[04314]서울 용산구 원효로97길 33-4 (청파동3가, 선린인터넷고등학교)</address>
@@ -177,6 +282,7 @@
       <div>팩스) 02-704-0960</div>
       <div>Copyright COPYRIGHT(C) SUNRIN INTERNET HIGHSCHOOL. ALL RIGHT RESERVED.</div>
     </div>
+  </div>
   </footer>
 </body>
 
