--- a/2021-web-sojon/sunrin.html
+++ b/2021-web-sojon/sunrin.html
@@ -22,29 +22,41 @@
       margin: 0 auto;
     }
 
-    header{
+    #header_div>img{
+      width: 220px;
+      height: 42px;
+    }
+
+    #header_div{
       display: flex;
       justify-content: space-between;
+      align-items: center;
+      height: 84px;
+      width: 950px;
     }
     nav > ul{
       width:100%;
       display: flex;
       list-style: none;
+      margin-bottom: 10px;
+      padding: 0;
     }
 
     nav>ul>li{
-      flex:1;
+      position: relative;
+      flex:auto;
     }
     nav>ul>li>a{
-      display: inline-block;
+      display: block;
       width: 100%;
       color: #555;
       text-decoration: none;
-      font-size: 13px;
+      font-size: 15px;
       line-height: 68px;
       letter-spacing: -1px;
-      font-weight: 600;
+      font-weight: 700;
       text-align: center;
+      font-family: "dotum", serif;
     }
     nav > ul >li>a+ul{
       display: none;
@@ -134,12 +146,42 @@
       display : none;
       color : blue;
     }
+    nav>ul>li:first-child>a:hover{
+      position:relative;
+      color : #da9d1c;
+    }
+    nav>ul>li:first-child>a:hover+ul,
+    nav>ul>li:first-child>a+ul:hover{
+      display: flex;
+      position: absolute;
+      flex-direction: column;
+      font-size: 12px;
+      font-family: "dotum", serif;
+      list-style: none;
+      padding: 18px;
+      width: 150px;
+      border : 1px solid orange;
+      background-color: white;
+      z-index: 1;
+    }
+    nav>ul>li:first-child>a+ul>li{
+      display: flex;
+      align-items: center;
+      width: 129px;
+      height: 26px;
+    }
+    nav>ul>li:first-child>a+ul>li:hover{
+      font-size: 13px;
+      font-weight: 700;
+      color : #da9d1c;
+    }
 
   </style>
 </head>
 
 <body>
   <header>
+  <div id="header_div">
     <img src="./assets/sunrin-logo.png" alt="">
     <div>
       <button>사이트맵</button>
@@ -149,6 +191,7 @@
       <input type="text" id="search">
       <label for="search"><img src="./assets/btn_search.gif" alt=""></label>
     </div>
+  </div>
   </header>
   <nav>
     <ul>
